<resources>
    <!-- App -->
    <string name="app_name">Homecare Ireland</string>

    <!-- Signup -->
    <string name="signup_name">Name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_signup">Sign Up</string>
    <string name="signup_existingaccount">Already have an account?</string>

    <!-- Signin -->
    <string name="signin_email">Email</string>
    <string name="signin_password">Password</string>
    <string name="signin_signin">Sign In</string>
    <string name="signin_noaccount">Create Account</string>
    <string name="select_photo">Select Photo</string>

    <!-- Navigation -->
    <string name="navigation_visits">Visits</string>
    <string name="navigation_clients">Clients</string>
    <string name="navigation_profile">Profile</string>
    <string name="navigation_settings">Settings</string>

    <!-- Visits -->
    <string name="visits_title">Visits</string>

    <!-- Visit -->
    <string name="visit_title">Visit Details</string>
    <string name="visit_clockin">Clock In</string>
    <string name="visit_clockout">Clock Out</string>

    <!-- Profile -->
    <string name="profile_title">Profile</string>
    <string name="profile_email">Email</string>
    <string name="profile_name">Name</string>
    <string name="profile_save">Save</string>
    <string name="profile_role">Role</string>
    <string name="profile_address1">Address 1</string>
    <string name="profile_address2">Address 2</string>
    <string name="profile_town">Town</string>
    <string name="profile_county">County</string>
    <string-array name="profile_counties">
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Donegal</item>
        <item>Dublin</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>
    <string name="profile_eircode">Eircode</string>

    <!-- Clients -->
    <string name="clients_title">Clients</string>

    <!-- Client -->
    <string name="client_title">Client Details</string>
    <string name="client_name">Name</string>
    <string name="client_address">Address</string>
    <string name="client_mobile">Mobile</string>
    <string name="client_marital">Marital Status</string>
    <string name="client_visits">Upcoming Visits</string>
    <string name="client_staff">Staff</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_signout">Sign Out</string>


    <!-- Testing -->
    <string name="description">description</string>
    <string name="title">title</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_client">ClientActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visit">VisitActivity</string>


</resources>
