<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_visits"
            android:icon="@drawable/navigation_calls_24dp"
            android:title="@string/navigation_visits" />

    <item
            android:id="@+id/navigation_clients"
            android:icon="@drawable/navigation_visits_24dp"
            android:title="@string/navigation_clients" />

    <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/navigation_profile_24dp"
            android:title="@string/navigation_profile" />
    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/navigation_settings_24dp"
            android:title="@string/navigation_settings"/>

</menu>
