<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClientActivity">

    <TextView
            android:id="@+id/textview_client_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <View
            android:id="@+id/divider1"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_name" />

    <TextView
            android:id="@+id/textview_client_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/client_address"
            app:layout_constraintBottom_toBottomOf="@+id/textview_client_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textview_client_address" />

    <TextView
            android:id="@+id/textview_client_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_mobile"
            app:layout_constraintBottom_toBottomOf="@+id/textview_client_mobile"
            app:layout_constraintStart_toStartOf="@+id/textview_client_address_label"
            app:layout_constraintTop_toTopOf="@+id/textview_client_mobile" />

    <TextView
            android:id="@+id/textview_client_marital_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_marital"
            app:layout_constraintBottom_toBottomOf="@+id/textview_client_marital"
            app:layout_constraintStart_toStartOf="@+id/textview_client_address_label"
            app:layout_constraintTop_toTopOf="@+id/textview_client_marital" />

    <TextView
            android:id="@+id/textview_client_address"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <TextView
            android:id="@+id/textview_client_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textview_client_address"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_address" />

    <TextView
            android:id="@+id/textview_client_marital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_marital"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textview_client_address"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_mobile" />

    <View
            android:id="@+id/divider2"
            style="@style/Divider"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_marital" />

    <View
            android:id="@+id/divider3"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_staff" />

    <View
            android:id="@+id/divider4"
            style="@style/Divider"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_client_visits" />

    <TextView
            android:id="@+id/textview_client_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_visits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

    <TextView
            android:id="@+id/textview_client_staff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/client_staff"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

</androidx.constraintlayout.widget.ConstraintLayout>