<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context="com.colinmaher.carersapp.SignupActivity">

    <!--
    <Button
            android:id="@+id/button_signup_selectphoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="8dp"

            android:text="@string/select_photo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
-->

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ProgressBar
                android:id="@+id/progressbar_signup_spinner"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="16dp"
                android:indeterminateTint="@color/red"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/textview_title"
                app:layout_constraintStart_toStartOf="@+id/textview_title"
                app:layout_constraintTop_toBottomOf="@+id/textview_signup_existingaccount" />

        <EditText
                android:id="@+id/edittext_signup_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/signup_edittext"
                android:ems="10"
                android:hint="@string/signup_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintEnd_toEndOf="@+id/edittext_signup_name"
                app:layout_constraintStart_toStartOf="@+id/edittext_signup_name"
                app:layout_constraintTop_toBottomOf="@+id/edittext_signup_name" />

        <TextView
                android:id="@+id/textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/app_name"
                android:textColor="@color/background"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <EditText
                android:id="@+id/edittext_signup_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/signup_edittext"
                android:ems="10"
                android:fitsSystemWindows="true"
                android:hint="@string/signup_password"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintEnd_toEndOf="@+id/edittext_signup_name"
                app:layout_constraintStart_toStartOf="@+id/edittext_signup_name"
                app:layout_constraintTop_toBottomOf="@+id/edittext_signup_email" />

        <EditText
                android:id="@+id/edittext_signup_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:autofillHints=""
                android:background="@drawable/signup_edittext"
                android:ems="10"
                android:hint="@string/signup_name"
                android:inputType="textPersonName"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview_title" />

        <TextView
                android:id="@+id/textview_signup_existingaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="10dp"
                android:text="@string/signup_existingaccount"
                android:textColor="@android:color/background_light"
                app:layout_constraintEnd_toEndOf="@+id/textview_title"
                app:layout_constraintStart_toStartOf="@+id/textview_title"
                app:layout_constraintTop_toBottomOf="@+id/button_signup_signup" />

        <Button
                android:id="@+id/button_signup_signup"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="100dp"
                android:background="@color/colorAccent"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/signup_signup"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edittext_signup_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleimageview_signup_selectphoto"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/button_signup_selectphoto"
        app:layout_constraintEnd_toEndOf="@+id/button_signup_selectphoto"
        app:layout_constraintStart_toStartOf="@+id/button_signup_selectphoto"
        app:layout_constraintTop_toTopOf="@+id/button_signup_selectphoto" />
        -->
</ScrollView>